--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -432,6 +432,7 @@
     <sys:String x:Key="Text.WorkingCopy.CommitAndPush">提交并推送</sys:String>
     <sys:String x:Key="Text.WorkingCopy.NoCommitHistories">没有提交信息记录</sys:String>
     <sys:String x:Key="Text.WorkingCopy.HasCommitHistories">最近输入的提交信息</sys:String>
+    <sys:String x:Key="Text.WorkingCopy.IncludeUntracked">显示未跟踪文件</sys:String>
 
     <sys:String x:Key="Text.Conflict.CherryPick">检测到挑选提交冲突! </sys:String>
     <sys:String x:Key="Text.Conflict.Rebase">检测到变基冲突！</sys:String>
