--- a/src/Views/About.xaml
+++ b/src/Views/About.xaml
@@ -72,7 +72,7 @@
                 Margin="0,0,0,8"
                 HorizontalAlignment="Center"
                 FontSize="11"
-                Text="VERSION: v1.0    .NET: v5.0"/>
+                Text="VERSION: v1.0"/>
 
             <DataGrid
                 x:Name="hotkeys"
