--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -7,16 +7,25 @@
              xmlns:controls="clr-namespace:SourceGit.Views.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="28" d:DesignWidth="800">
-    <Grid Margin="6,4,0,0">
+    <Grid Margin="0,4,0,0">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         
+        <!-- Seperator -->
+        <Rectangle
+            Grid.Column="0"
+            x:Name="startSeperator"
+            Width="1" Height="16" Margin="0,2,0,0"
+            Fill="{DynamicResource Brush.FG2}"
+            Opacity=".5"/>
+
         <!-- Left Scroller -->
         <controls:IconButton
-            Grid.Column="0"
+            Grid.Column="1"
             x:Name="leftScroller"
             Click="ScrollLeft"
             Width="18" Padding="6"
@@ -25,10 +34,10 @@
             Icon="{StaticResource Icon.ScrollLeft}"
             WindowChrome.IsHitTestVisibleInChrome="True"
             Visibility="Collapsed"/>
-        
+
         <!-- Tabs -->
         <ScrollViewer
-            Grid.Column="1"
+            Grid.Column="2"
             x:Name="scroller"
             HorizontalScrollBarVisibility="Hidden"
             VerticalScrollBarVisibility="Disabled">
@@ -64,12 +73,13 @@
 
                                                 <TextBlock
                                                     Margin="4,0"
+                                                    Width="80" MaxWidth="80" TextAlignment="Center"
                                                     Text="{Binding Title}"/>
                                                 
                                                 <controls:IconButton
                                                     Click="CloseTab"
                                                     Width="16" Height="16"
-                                                    Margin="4,0,0,0" Padding="4"
+                                                    Margin="0,0,0,0" Padding="4"
                                                     ToolTip="{DynamicResource Text.Close}"
                                                     Icon="{StaticResource Icon.Close}"
                                                     HoverBackground="{DynamicResource Brush.NewPageHover}"/>
@@ -121,7 +131,7 @@
         
         <!-- Right Scroller -->
         <controls:IconButton
-            Grid.Column="2"  
+            Grid.Column="3"  
             x:Name="rightScroller"
             Click="ScrollRight"
             Width="18" Padding="6"
